<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="100"
    tools:context=".activities.ProductDetail">

    <TextView
        android:id="@+id/productTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center_horizontal|center_vertical"
        android:padding="2dp"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:text="Product Title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="@string/str_usd"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/precioDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/precioDetail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/productImageDetail"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_weight="30"
        android:adjustViewBounds="true"
        android:contentDescription="@string/str_description"
        android:scaleType="centerInside"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/productDescriptionDetail"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:layout_weight="45"
        android:gravity="left"
        android:padding="8dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_add_car" />

</LinearLayout>